--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>calculator</title>
    <link rel="stylesheet" href="./styles.css">
+   <link rel="shortcut icon" href="./assets/icons/calculator.svg" type="image/png">
 </head>
 
 <body>
